<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clQuini"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nivell0"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTitol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/app_name"
                android:textColor="@color/nivell0"
                android:textSize="@dimen/labelFormLarge"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher_foreground" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell2"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/llIndicadors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nivell2"
                android:padding="2dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvDiaFestiu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="2dp"
                    android:text="F"
                    android:textAlignment="center"
                    android:textSize="@dimen/labelFormXShort"
                    android:textColor="@color/white"
                    android:background="@color/nivellVermell"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvMesAgost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="2dp"
                    android:text="A"
                    android:textAlignment="center"
                    android:textSize="@dimen/labelFormXShort"
                    android:textColor="@color/white"
                    android:background="@color/nivellTaronja"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvDataAvui"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="@string/data_avui"
                android:textSize="@dimen/labelFormMedium"
                android:textColor="@color/nivell0"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/llCalendariDret"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2dp"
                android:gravity="center_vertical|end">
                <ImageView
                    android:id="@+id/ivCalendari"
                    android:layout_width="@dimen/iconMedium"
                    android:layout_height="@dimen/iconMedium"
                    android:layout_weight="0"
                    android:scaleType="fitStart"
                    app:srcCompat="@mipmap/ic_calendari_foreground" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llFavorits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell3"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivFavorit"
                android:layout_width="@dimen/iconMedium"
                android:layout_height="@dimen/iconMedium"
                android:layout_weight="0"
                android:scaleType="fitStart"
                android:padding="2dp"
                app:srcCompat="@mipmap/ic_favorit_foreground" />

            <TextView
                android:id="@+id/tvFavorits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/favorits"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llListaFavorits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell4"
            android:orientation="vertical"
            android:gravity="top">
            <ListView
                android:id="@+id/listViewFav"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="2dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llFiltres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell3"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivfiltre"
                android:layout_width="@dimen/iconMedium"
                android:layout_height="@dimen/iconMedium"
                android:layout_weight="0"
                android:scaleType="fitStart"
                android:padding="2dp"
                app:srcCompat="@mipmap/ic_filtres_foreground" />

            <TextView
                android:id="@+id/tvFiltre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/filtres"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llLlistaLiniesParades"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/nivell4"
            android:orientation="horizontal"
            android:gravity="top">
            <LinearLayout
                android:id="@+id/llLlistaLinies"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@color/nivell4"
                android:orientation="vertical"
                android:gravity="top">
                <TextView
                    android:id="@+id/tvTitolLinies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/liniesSentits"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/labelFormXShort"
                    android:textStyle="bold" />
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llLlistaParades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nivell4"
                android:orientation="vertical"
                android:gravity="top">
                <TextView
                    android:id="@+id/tvTitolParades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/parades"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/labelFormXShort"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/iLLPeuCalendari"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/nivell4"
            android:gravity="bottom"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/iXarxesSocials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nivell3"
                android:gravity="bottom"
                android:orientation="horizontal">
                <include layout="@layout/inc_xarxes_socials" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>